# json_converter

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  rules.md
.roo/: mcp.json
docs/: prompt1.txt  prompt2.txt
examples/: ejemplo.json  ejemplo.jsonl
src/json_converter/: __init__.py  __main__.py  cli.py  converter.py  file_handler.py
src/json_to_jsonl/: __main__.py  cli.py  file_handler.py
tests/: test_converter.py  test_file_handler.py
